# Gosh-Retro-Launcher

./: .gitignore  AUDIT.md  CHANGELOG.md  CODEBASE_HEALTH_AUDIT.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: build-linux-arm64.yml  build-linux-flatpak.yml  build-linux.yml  build-macos.yml  build-windows.yml
assets/icons/: .gitkeep
docs/: API_REFERENCE.md  ARCHITECTURE.md  DOCUMENTATION_REVIEW.md  USER_GUIDE.md
docs/diagrams/: data-flow.md  data-model.md  deployment.md  sequence-diagrams.md  system-architecture.md  user-flows.md
resources/: .gitkeep  icon.icns  program-manager.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: file.rs  launch.rs  mod.rs  store.rs  system.rs  window.rs
src/main/: index.ts  store.ts  tray.ts  window.ts
src/main/ipc/: appInfoHandlers.ts  fileHandlers.ts  index.ts  launchHandlers.ts  storeHandlers.ts  windowHandlers.ts
src/main/ipc/__tests__/: launchHandlers.test.ts  storeHandlers.test.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte  App.tsx  main.ts  main.tsx
src/renderer/src/components/: ErrorBoundary.tsx
src/renderer/src/hooks/: useAnimatedUnmount.ts  useDraggable.ts  useResizable.ts  useSounds.ts
src/shared/constants/: ipc.ts
src/shared/types/: index.ts
(+90 files in other folders)
