[package]
name = "gosh-retro-launcher"
version = "1.0.0"
description = "Gosh Retro Launcher - A Windows 3.1 Program Manager clone"
authors = ["Goshitsarch"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "gosh_retro_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
open = "5"
tokio = { version = "1", features = ["time"] }

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
